--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EZKapal">
-        <activity android:name=".Activity.TransaksiActivity"></activity>
+        <activity android:name=".AdminMainActivity"></activity>
+        <activity android:name=".Activity.TransaksiActivity" />
         <activity android:name=".Activity.DetailTransaksiActivity" />
         <activity android:name=".Activity.RiwayatTransaksiActivity" />
         <activity android:name=".Activity.TransaksiTerkiniActivity" />
@@ -36,7 +37,7 @@
             android:name=".Activity.CaptureActivity"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
-            android:theme="@style/zxing_CaptureTheme"/>
+            android:theme="@style/zxing_CaptureTheme" />
 
         <meta-data
             android:name="preloaded_fonts"
