--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+
+    //LiveData
+    //for lifecycle and LiveData and ViewModel
+    implementation 'android.arch.lifecycle:runtime:1.1.1'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
 }
 
 repositories {
