--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EZKapal">
-        <activity android:name=".Activity.WebViewActivity"></activity>
-        <activity android:name=".AdminMainActivity"></activity>
+        <activity android:name=".Activity.NotificationActivity"></activity>
+        <activity android:name=".Activity.EditPasswordActivity" />
+        <activity android:name=".Activity.EditProfileActivity" />
+        <activity android:name=".Activity.WebViewActivity" />
+        <activity android:name=".AdminMainActivity" />
         <activity android:name=".Activity.TransaksiActivity" />
         <activity android:name=".Activity.DetailTransaksiActivity" />
         <activity android:name=".Activity.RiwayatTransaksiActivity" />
@@ -39,6 +42,14 @@
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             android:theme="@style/zxing_CaptureTheme" />
+
+        <service
+            android:name=".Services.FirebaseCloudMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
         <meta-data
             android:name="preloaded_fonts"
