--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,16 +2,15 @@ plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
 }
-apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.ezcats.ezkapal"
         minSdkVersion 26
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -45,6 +44,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //ZXing Camera Library
+    implementation 'me.dm7.barcodescanner:zxing:1.9.13'
+
 
     //Shimmer Dependency
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
